# gilla

./: .gitignore  CONTRIBUTING.md  README.md  dora-metrics.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
adr/: 001-cli-python-framework-typescript.md  002-dora-metrics-bot-filtering.md  003-ci-cd-pipeline-architecture.md  DESIGN.md
devex-cli/: .gitignore  README.md  dora-metrics.json  pyproject.toml
devex-cli/devex_cli/: constants.py  main.py
devex-cli/devex_cli/commands/: check_branch.py  dora.py  init.py  pr.py  validate.py
devex-cli/tests/: test_check_branch.py  test_dora.py  test_init.py  test_pr.py  test_validate.py
devex-framework/: README.md  devex.json  package.json  pnpm-lock.yaml  tsconfig.json
devex-framework/.github/workflows/: ci.yml
devex-framework/infra/: cdk-stack-production.json  cdk-stack-sandbox.json  cdk-stack-staging.json  cdk-stack.json
devex-framework/src/: cli.ts  index.ts
devex-framework/src/core/: generator.ts
devex-framework/src/tests/: generator.test.ts
devex-framework/src/types/: index.ts
specs/: ARCHITECTURE.md  STEERING.md
